# whofetch

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  build_test.yml  build_test_macos.yml  build_test_ubuntu.yml  build_test_windows.yml  installer_test.yml  macos_ci.yml  ubuntu_ci.yml  windows_ci.yml
client/: CMakeLists.txt
client/include/: whofetch.hpp
client/src/: main.cpp  whofetch.cpp
include/: config.h.in  namecard.hpp  parsearg.hpp  resource.hpp  util.hpp
installer/windows/: README.md  main.iss
lib/: CMakeLists.txt  parsearg.cpp  resource.cpp  util.cpp
lib/test/: lib_test.cpp
libs/parsearg/: CMakeLists.txt  parsearg.cpp  parsearg.hpp
libs/resource/: CMakeLists.txt
libs/util/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  parsearg.cpp  util.cpp  whofetch.cpp
test/: CMakeLists.txt  lib_test.cpp
